2006-12-16  Mukund Sivaraman  <muks@mukund.org>

	* app/core/gimp-transform-resize.c: Fixed code in
	gimp_transform_resize_crop() to calculate the maximum rectangle in
	the quadrilateral which results after a transform; added a function
	parameter for aspect ratio too.

2006-12-16  Tor Lillqvist  <tml@novell.com>

	* app/core/gimptooloptions.c: On Win32, include gimpwin32-io.h for
	S_IRGRP and friends.

2006-12-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.c (gimp_image_add_layers): fixed order of
	layers for the position == -1 (add above avtive layer) case.
	Fixes bug #386199.

2006-12-15  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.[ch]: added new function
	gimp_ui_manager_activate_action() as a shortcut for looking up the
	action and activating it.

	* app/display/gimpdisplayshell-close.c
	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimpitemtreeview.c
	* app/widgets/gimppaletteeditor.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimptooloptionseditor.c: use the new function.

	* app/actions/file-commands.c
	* app/dialogs/file-save-dialog.c: minor code cleanup.

2006-12-14  Michael Natterer  <mitch@gimp.org>

	* app/actions/context-actions.c
	* app/actions/context-commands.[ch]: applied modified patch from
	David Gowers which adds brush spacing actions. Fixes bug #385679.

2006-12-14  Michael Natterer  <mitch@gimp.org>

	Applied slightly modified patch from David Gowers which abstracts
	away and unifies searching a color in a palette (bug #132146):

	* app/core/gimppalette.[ch]: added gimp_palette_find_entry().

	* app/widgets/gimpcolorselectorpalette.c
	* app/widgets/gimppaletteeditor.c: use it for selecting matching
	colors from the active palette.

2006-12-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.c: Optimizations for string
	comparisons. Time spent in oblist_find_by_name() reduced by ~50%