@@ -243,6 +243,7 @@ EXPORTS
 	gimp_prop_enum_stock_box_new
 	gimp_prop_expander_new
 	gimp_prop_file_chooser_button_new
+	gimp_prop_file_chooser_button_new_with_dialog
 	gimp_prop_hscale_new
 	gimp_prop_int_combo_box_new
 	gimp_prop_label_new
